# oxen-mq-node

./: .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  README.md  index.js  package-lock.json  package.json  readme.md
cmake/: mingw64.cmake  static-deps.cmake
src/: oxenmq.cpp
